--- a/style/main.css
+++ b/style/main.css
@@ -368,7 +368,9 @@ color: #000000;
   border:3px solid transparent;
 }
 .four-section{
-  margin-top: 56px;  
+  margin-top: 56px; 
+  background: #00BAFC;
+  height: 543px;
 }
 
 .hero-four{
@@ -378,11 +380,11 @@ color: #000000;
   margin-bottom: 56px;
   margin-right: 100px;
   margin-left: 100px;
-  /* margin-left: auto;
-  margin-right: auto; */
 }
 .hero-content-four{
   display: block;
+  margin-top: 56px;
+  padding-bottom: 26px;
   
 }
 .hero-content-four h4{
@@ -402,8 +404,158 @@ color: #000000;
   line-height: 150%;
   text-align: center;
   color: #FFFFFF;
+  padding-bottom: 16px;
 }
 .text{
+   
+}
+.form-box{
+  position: relative;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  width: 348px;
+  height: 280px;
+  background: white;
+  border-radius: 5px;
+  margin-bottom: 56px;
+}
+.form-box form{
+  margin-top: 24px 24px 24px 24px;
   
+}
+.user-name{
+  background: #F3F3F3;
+  border-radius: 5px;
+  padding: 16px;
+  border: 2px solid lightgray;
+  margin-bottom: 6px;
+  margin-top:24px;
+  margin-left: 30px;
+  margin-right: 24px;
+
+}
+.user-number{
+  background: #F3F3F3;
+  border-radius: 5px;
+  padding: 16px;
+  border: 2px solid lightgray;
+  margin-bottom: 6px;
+  margin-top:10px;
+  margin-left: 30px;
+  margin-right: 24px;
+}
+::placeholder{
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+
+  color: #000000;
+}
+.user-wishes{
+  background: #F3F3F3;
+  border-radius: 5px;
+  padding: 16px;
+  border: 2px solid lightgray;
+  margin-bottom: 6px;
+  margin-top:10px;
+  margin-left: 30px;
+  margin-right: 24px;
+}
+.form-box-link{
+  background: #00BAFC;
+  border-radius: 5px;
+  padding: 8px 16px;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #FFFFFF;  
   
+}
+.form-box-link:hover{
+  background: #FFFFFF;
+  color: #00BAFC;
+  border: 2px solid #00BAFC;    border-radius: 5px; 
+}
+.form-box-link:active{
+  background: rgba(0, 186, 252, 0.6);
+  border-radius: 5px;
+  border:2px solid transparent;
+  color: #FFFFFF;
+}
+.link{
+  text-align: center;
+  padding-top: 16px;
+}
+.site-footer{
+  background: #191919;
+  height: 338px;
+  padding-top: 56px;
+  padding-bottom: 56px;
+}
+.footer-section{
+  display: flex;
+}
+.footer-section h5{
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 130%;
+  color: #FFFFFF;  
+  
+}
+.text-footer{
+  display: flex;
+  width: 320px;
+  margin-top: 44px;
+  margin-left: -148px;
+}
+.footer-section-text{
+  font-family: 'Open Sans';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 150%;
+color: #FFFFFF;
+}
+.cite-pages{
+  margin-left: 100px;
+}
+.cite-pages-list{
+  margin-top: 16px;
+}
+.cite-page-item{
+padding-bottom: 8px;
+}
+.cite-page-item a{
+font-weight: 400;
+font-size: 13px;
+line-height: 20px;
+color: #FFFFFF;
+}
+.internet-section{
+  margin-left: 87px;
+}
+.internet-section ul{
+  margin-top: 16px;
+}
+.internet-section li{
+  padding-bottom: 8px;
+  display: flex;
+}
+.internet-section a{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+.internet-section p{
+  padding-left: 8px;
 }
